--- a/gb/1/1/5/n30289.md
+++ b/gb/1/1/5/n30289.md
@@ -4,52 +4,47 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>到底是谁在掌管美国经济？</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元1月5日讯】 总统<ahref=http://www.epochtimes.com/news/epochnews/news/Focus.asp?Focus_ID=702><font color=blue>布什</font></A>1月4日在记者会上肯定联储会降息是“大胆的步骤”，但必须与他提出的减税政策相配合，才能真正阻止经济衰退。</p>
+	<p>【大纪元1月5日讯】 总统<font color="blue">布什</font>1月4日在记者会上肯定联储会降息是“大胆的步骤”，但必须与他提出的减税政策相配合，才能真正阻止经济衰退。</p>
 <p>据中新社报道，布什说，他将要求国会尽快讨论他提出的一万三千亿美元的减税计划。布什1月3日起在德州与商业领袖们举行了为期两天的会议，讨论美国的经济形势、贸易和就业问题。与会者带来一些坏消息，如销售减少；失业率增长；曾经不可一世的华尔街股市去年暴跌，资产缩水的投资人共损失三亿美元，多家公司笼罩在愁云惨雾之中。</p>
 <p>有分析家称，联储会的降息决定使布什的减税计划变得复杂起来。如果降息使经济停止下滑，民主党人将不会支持布什大幅度减税。</p>
 <p>另据报道，联储会今天宣布进一步降低联邦对商业银行贷款的贴现率，使其变为百分之五点五。</p>
 <p>《时报周刊》网络版发表文章说，格林斯潘突然降息，是在提醒正举行经济会议的候任总统布什，市场上的问题，总统还是要听我联储会主席的。布什当选后曾会见与他父亲老布什不太合拍的格林斯潘，并谈到减税问题。但那次会见只进行了二十分钟。</p>
 <p>格老向布什发出的信息是：你在竭力推动的减税计划不能阻止经济下滑，而我宣布降息即可做到这一点。真不知道，在美国倒底是谁在掌管经济？</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30271 target=_blank class=ltnn>香港银行紧随美国降息 有望促进经济复苏</a> (1/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30225 target=_blank class=ltnn>布什与高科技企业主管商讨经济与科技</a> (1/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30203 target=_blank class=ltnn>科技业可能出现大幅裁员 </a> (1/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30188 target=_blank class=ltnn>欧洲股市看好高成长型股票 电信股引领大盘</a> (1/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30182 target=_blank class=ltnn>盈余预警蜂拥而至 科技股再遭抛卖</a> (1/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30017 target=_blank class=ltnn>美联储降息对中国是件好事</a> (1/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;<br />
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30271" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">香港银行紧随美国降息 有望促进经济复苏</a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30225" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什与高科技企业主管商讨经济与科技</a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30203" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">科技业可能出现大幅裁员 </a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30188" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">欧洲股市看好高成长型股票 电信股引领大盘</a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30182" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">盈余预警蜂拥而至 科技股再遭抛卖</a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30017" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美联储降息对中国是件好事</a> (1/5/2001)???? </li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/26/n10811962.md#1" target="_blank">他曾接近失明 一位程序员绝处逢生后的告白</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537972.md#1">旅美台湾画家张家玮的岛屿之梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540970.md#1">【马克时空】十二日战争摧毁伊朗核能力 瓦解抵抗轴心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540705.md#1">【重播】众院议长约翰逊在保守派团体晚会演讲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540523.md#1">【时事金扫描】抹黑美军行动 女记者被川普点名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539733.md#1">火星表面惊现巨型“蜘蛛网” 古代水道证据？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539550.md#1">中共被爆秘密派兵赴俄 专家揭中俄背后算计</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540033.md#1">演员于清斌回应送外卖一事：行业寒冬没有戏拍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539600.md#1">打破婚变传闻 吴奇隆刘诗诗一家三口罕见同框</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540300.md#1">郑欣宜因伤退出《歌手2025》 网友呛节目组</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539794.md#1">丰田销量连三月创新高 美日中市场需求强劲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541283.md#1">为什么我们会爱上不爱我们的人？ 专家解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539961.md#1">上厕所用再生或竹制卫生纸安全吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536363.md#1">前海豹突击队员讲授如何持之以恒地锻炼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536360.md#1">每日一颗巴西坚果 远离营养补充剂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/1/5/n30289.htm">到底是谁在掌管美国经济？</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/1/5/n30289.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
